# lox

./: .gitignore  CMakeLists.txt  Hello.cppm  PLAN  PLAN.md  PLAN_COMP_EXAMPLES  README.md  ast.cpp  ast.h  ast_fwd.h  closure_design.md  common.h  error.h  format  lvar_design.md  main.cpp  parser.h  rust_Ls  tkn_err.lox  token.cpp  token.h  upvalues.md  visitor.cc  visitor.cpp  visitor.h
cpplox/: CMakeLists.txt  common.h  error.cpp  links  tkns.lox  token.cpp  token.h
logic/: Makefile  ParserPass.cpp  ParserPass.h  TokenizerPass.cpp  TokenizerPass.h  main.adb  main.cpp
rlox/: simple_expr.lox
rlox/src/: bc.rs  error.rs  main.rs  obj.rs  parse.rs  token.rs
rlox/tests/: basic_str_cat.lox  err_paren1.lox  simple_expr4.lox
src/: ast.rs  bc.rs  compile.rs  error.rs  eval.rs  main.rs  parse.rs  token.rs  variable_pass.rs  vpass.rs
tests/: FAIL_if_block.lox  basic_if.lox  basic_if_else.lox  basic_if_else2.lox  basic_str_cat.lox  basic_while.lox  basic_while_2var_cond.lox  basic_while_false_cond.lox  counter.lox  dee.lox  expr1.lox  expr2.lox  func1.lox  func1.rs  func2.rs  func3.rs  func4.rs  gvar1.lox  gvar2.lox  hyou1.rs  late_capture.lox  lvar1.lox  lvar2.lox  nfunc1.lox  nfunc2.lox  refchase.lox  simple_broken_error_test_that_needs_someone_to_output_a_better_error.lox  simple_expr1.lox  simple_expr3.lox  simple_expr5.lox  smuggle.lox  upv1.lox  upval1.lox
